src/styles/application.scss
@import '~crds-styles/assets/stylesheets/bootstrap';

.dark-theme {
  background: lighten($cr-gray-darker, .75);
}

.container {
  margin: 1em auto;
  width: auto;
}

app-preloader {
  display: none;
  .loading & {
    display: block;
  }
}

.outlet-wrapper {
  display: block;
  .loading & {
    display: none;
  }
}

// Add me to map
app-add-me-to-map {
  background-color: darken($cr-blue, 20);
  color: $cr-white;
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.fauxdal {
  &.fauxdal-fullscreen {
    .container-fluid {
      background-color: darken($cr-blue, 20);
      padding-top: 1rem;
      padding-bottom: 1rem;

      a {
        color: $cr-white;

        &:hover {
          color: darken($cr-white, 20);
        }
      }

      address-form {
        display: block;
        margin: 0 auto;
        padding-top: 1rem;
        width: 100%;
      }

      crds-content-block {
        display: block;
        margin: 0 auto;
        text-align: center;
      }

      @media (min-width: $screen-xs) {
        padding: 2rem;

        crds-content-block {
          width: 80%;
        }

        address-form {
          width: 60%;
        }
      }

      @media (min-width: $screen-sm) {
        crds-content-block {
          width: 70%;
        }

        address-form {
          width: 50%;
        }
      }

      @media (min-width: $screen-md) {
        crds-content-block {
          width: 60%;
        }

        address-form {
          width: 40%;
        }
      }

      @media (min-width: $screen-lg) {
        crds-content-block {
          width: 40%;
        }

        address-form {
          width: 25%;
        }
      }
    }
  }

  .title {
    color: $cr-white;
  }
}

// Map searchbar
app-search-bar {
  background-color: $cr-blue-dark;
  display: flex;
  justify-content: flex-start;
  padding: .5rem 1rem;

  .input-group {
    display: inherit;
    flex: 1 1 auto;
    width: auto;

    .input-group-btn {
      width: initial;
    }

    @media (min-width: $screen-xs) {
      flex-grow: 0;
      width: 20rem;
    }
  }
}

// Style map
sebm-google-map {
  background-color: $cr-gray-lighter;
  height: calc(100vh - 69px); // 69px is the height of the header/searchbar
  width: 100vw;
}

// Map footer
app-map-footer {
  bottom: 0;
  position: absolute;
  width: 100%;
}

